sandbox/output
TicketDispenserTest.java:14: error: cannot find symbol
        assertEquals(1, newTicket.getTurnNumber() - previousTicket.getTurnNumber());
                                                    ^
  symbol:   variable previousTicket
  location: class TicketDispenserTest
1 error
